plugins {
    id 'net.fabricmc.fabric-loom-remap'
}

group = 'fr.riege.ebsl'
version = rootProject.findProperty('mod_version') ?: '1.0.0'

repositories {
    mavenCentral()
}

dependencies {
    // Use files() to bypass Loom's project dependency substitution which causes circular deps
    compileOnly files(project(':common').sourceSets.main.output.classesDirs)
    minecraft "com.mojang:minecraft:${minecraft_version}"
    mappings loom.officialMojangMappings()
    // Loom needs fabric-loader to set up MC jars — not used in our code
    modCompileOnly "net.fabricmc:fabric-loader:${loader_version}"
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}
